<resources>
    <string name="app_name">LabSafe</string>
    <string name="chem_data">LabSafe Chemical Database</string>
    <string name="emergency">LabSafe Emergency List</string>
    <string name="desc">Image</string>
    <string name="label1">What is your emergency?</string>
    <string name="label2">Chemical Database</string>
    <string name="label3">Rate us</string>
    <string name="label4">About us</string>
    <string name="lvl1">High lvl 4</string>
    <string name="lvl2">Low lvl 0</string>
    <string name="about_body">\n \n \t This application has been distributed by Apuya, Escobar, and Fernandez, 5th year BS Chemical Engineering students from the University of the Philippines Diliman.
        \n \n \t The app is a helpful tool for laboratory safety and first aid procedures, and an improvement on the LabSafe application that was first designed by Lim, Lutao, and Saluta.
        \n \n \t The design of the application was done under the guidance of Dr. Miguel Francisco M. Remolona, PhD from the Department of Chemical Engineering.
        \n \n \t All the Material Safety Data Sheets used in this application was sourced from ScienceLab.com
        \n \n \t The app is currently fully functional only to Android versions 7 (Nougat) and above.
        \n \n \n \t Contact us:
        \n \t \t aaapuya@up.edu.ph
        \n \t \t azescobar@up.edu.ph
        \n \t \t blfernandez@up.edu.ph
    </string>
</resources>
