<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".WhereIsYourEmergency">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar1"
        android:background="@color/colorPrimary"/>
    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04"/>
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".145"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1"
        android:contentDescription="@string/desc"
        android:src="@drawable/logo2"/>
    <ImageView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/desc"
        android:visibility="gone"
        android:src="@drawable/logo2"/>
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textCursorDrawable="@null"
        android:textColor="@color/colorPrimaryDark"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar1"
        android:hint="@string/hint"
        app:backgroundTint="@color/colorPrimaryDark">
        <requestFocus />
    </EditText>
    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText"/>
    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26"/>
    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>
    <ImageButton
        android:id="@+id/button1"
        android:layout_width="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".22"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        android:background="@drawable/img_btn1"
        tools:ignore="HardcodedText"
        android:contentDescription="@string/desc"/>
    <ImageButton
        android:id="@+id/button2"
        android:layout_width="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".22"
        app:layout_constraintLeft_toRightOf="@id/guideline3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        android:background="@drawable/img_btn2"
        tools:ignore="HardcodedText"
        android:contentDescription="@string/desc" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>
    <ImageButton
        android:id="@+id/button3"
        android:layout_width="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline4"
        app:layout_constraintRight_toLeftOf="@id/guideline3"
        android:background="@drawable/img_btn3"
        android:onClick="rate"
        android:contentDescription="@string/desc"/>
    <ImageButton
        android:id="@+id/button4"
        android:layout_width="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline4"
        app:layout_constraintLeft_toRightOf="@id/guideline3"
        android:background="@drawable/img_btn4"
        android:onClick="rate"
        android:contentDescription="@string/desc"/>
    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02"/>
    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07"/>
    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"/>
    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>
    <ImageButton
        android:id="@+id/button5"
        android:layout_width="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".05"
        app:layout_constraintBottom_toTopOf="@id/guideline6"
        app:layout_constraintRight_toLeftOf="@id/guideline8"
        app:layout_constraintTop_toBottomOf="@id/guideline5"
        app:layout_constraintLeft_toRightOf="@id/guideline7"
        android:background="@drawable/img_btn5"
        android:onClick="home"
        android:contentDescription="@string/desc"/>
    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55"/>
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/guideline3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintBottom_toTopOf="@id/guideline9"
        android:text="@string/label1"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guideline3"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/button2"
        app:layout_constraintBottom_toTopOf="@id/guideline9"
        android:text="@string/label2"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88"/>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/guideline3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/button3"
        app:layout_constraintBottom_toTopOf="@id/guideline10"
        android:text="@string/label3"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guideline3"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintBottom_toTopOf="@id/guideline10"
        android:text="@string/label4"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        />
</android.support.constraint.ConstraintLayout>